# bromite

user_scripts/src/chrome/: chrome_paks.gni
user_scripts/src/chrome/android/: BUILD.gn  java_sources.gni
user_scripts/src/chrome/android/java/src/org/chromium/chrome/browser/: AfterStartupTaskUtils.java
user_scripts/src/chrome/android/java/src/org/chromium/chrome/browser/download/: DownloadUtils.java
user_scripts/src/chrome/android/java/src/org/chromium/chrome/browser/settings/: MainSettings.java  SettingsActivity.java
user_scripts/src/chrome/android/proguard/: main.flags
user_scripts/src/chrome/browser/: BUILD.gn  about_flags.cc  flag_descriptions.cc  flag_descriptions.h
user_scripts/src/chrome/browser/prefs/: browser_prefs.cc
user_scripts/src/chrome/browser/profiles/: chrome_browser_main_extra_parts_profiles.cc  profile_manager.cc
user_scripts/src/chrome/browser/ui/webui/: chrome_web_ui_controller_factory.cc
user_scripts/src/chrome/renderer/: BUILD.gn  chrome_content_renderer_client.cc
user_scripts/src/components/: components_strings.grd
user_scripts/src/components/browser_ui/settings/android/java/src/org/chromium/components/browser_ui/settings/: SettingsUtils.java
user_scripts/src/components/user_scripts/android/: BUILD.gn  java_sources.gni  user_scripts_bridge.cc  user_scripts_bridge.h
user_scripts/src/components/user_scripts/android/java/res/layout/: accept_script_item.xml  accept_script_list.xml  scripts_preference.xml
user_scripts/src/components/user_scripts/android/java/res/values/: dimens.xml
user_scripts/src/components/user_scripts/android/java/res/xml/: main_preferences_addon_userscripts.xml  userscripts_preferences.xml
user_scripts/src/components/user_scripts/android/java/src/org/chromium/chrome/browser/user_scripts/: UserScriptsUtils.java
user_scripts/src/components/user_scripts/android/java/src/org/chromium/components/user_scripts/: FragmentWindowAndroid.java  IUserScriptsUtils.java  ScriptInfo.java  ScriptListBaseAdapter.java  ScriptListPreference.java  UserScriptsBridge.java  UserScriptsPreferences.java
user_scripts/src/components/user_scripts/browser/: BUILD.gn  file_task_runner.cc  file_task_runner.h  user_script_loader.cc  user_script_loader.h  user_script_pref_info.cc  user_script_pref_info.h  user_script_prefs.cc  user_script_prefs.h  userscripts_browser_client.cc  userscripts_browser_client.h
user_scripts/src/components/user_scripts/browser/resources/: browser_resources.grd
user_scripts/src/components/user_scripts/browser/resources/user-script-ui/: BUILD.gn  user-scripts-ui.html  user-scripts-ui.js
user_scripts/src/components/user_scripts/browser/ui/: user_scripts_ui.cc  user_scripts_ui.h
user_scripts/src/components/user_scripts/common/: BUILD.gn  constants.h  error_utils.cc  error_utils.h  extension_message_generator.cc  extension_message_generator.h  extension_messages.cc  extension_messages.h  host_id.cc  host_id.h  script_constants.h  url_pattern.cc  url_pattern.h  url_pattern_set.cc  url_pattern_set.h  user_script.cc  user_script.h  user_scripts_features.cc  user_scripts_features.h  view_type.cc  view_type.h
user_scripts/src/components/user_scripts/renderer/: BUILD.gn  extension_frame_helper.cc  extension_frame_helper.h  injection_host.cc  injection_host.h  script_context.cc  script_context.h  script_injection.cc  script_injection.h  script_injection_callback.cc  script_injection_callback.h  script_injection_manager.cc  script_injection_manager.h  script_injector.h  scripts_run_info.cc  scripts_run_info.h  user_script_injector.cc  user_script_injector.h  user_script_set.cc  user_script_set.h  user_script_set_manager.cc  user_script_set_manager.h  user_scripts_dispatcher.cc  user_scripts_dispatcher.h  user_scripts_renderer_client.cc  user_scripts_renderer_client.h  web_ui_injection_host.cc  web_ui_injection_host.h
user_scripts/src/components/user_scripts/renderer/resources/: user_scripts_renderer_resources.grd
user_scripts/src/components/user_scripts/strings/: userscripts_strings.grdp
user_scripts/src/tools/gritsettings/: resource_ids.spec
user_scripts/src/ui/android/java/src/org/chromium/ui/base/: SelectFileDialog.java
