# This file is part of Bromite.

# Bromite is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# Bromite is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with Bromite. If not, see <https://www.gnu.org/licenses/>.

import("//build/config/features.gni")

group("browser") {
  public_deps = [
    "//components/user_scripts/browser:browser_sources",
  ]
}

source_set("browser_sources") {
  visibility = [ "./*" ]

  sources = [
    "file_task_runner.cc",
    "file_task_runner.h",
    "userscripts_browser_client.cc",
    "userscripts_browser_client.h",
    "user_script_loader.cc",
    "user_script_loader.h",
    "user_script_prefs.cc",
    "user_script_prefs.h",
    "user_script_pref_info.cc",
    "user_script_pref_info.h",
  ]

  deps = [
    "//base:i18n",
    "//components/keyed_service/content",
    "//components/keyed_service/core",
    "//components/pref_registry",
    "//components/prefs",
    "//content/public/browser",
    "//crypto:platform",
    "//components/user_scripts/common",
    "//services/device/public/mojom",
    "//services/preferences/public/cpp",
    "//services/service_manager/public/cpp",
    "//third_party/blink/public/common",
    "//third_party/blink/public/mojom/frame",
    "//ui/display",
  ]

  public_deps = [
    "//content/public/common",
  ]

  configs += [
    "//build/config:precompiled_headers",

    # TODO(jschuh): crbug.com/167187 fix size_t to int truncations.
    "//build/config/compiler:no_size_t_to_int_warning",
    "//build/config/compiler:wexit_time_destructors",
  ]
}
