# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")
import("//mojo/public/tools/bindings/mojom.gni")

static_library("common") {
  sources = [
    "user_scripts_features.cc",
    "user_scripts_features.h",
    "constants.h",
    "host_id.cc",
    "host_id.h",
    "script_constants.h",
    "url_pattern_set.cc",
    "url_pattern_set.h",
    "url_pattern.cc",
    "url_pattern.h",
    "user_script.cc",
    "user_script.h",
    "view_type.cc",
    "view_type.h",
    "extension_messages.cc",
    "extension_messages.h",
    "extension_message_generator.cc",
    "extension_message_generator.h",
  ]

  configs += [
    "//build/config:precompiled_headers",

    # TODO(jschuh): crbug.com/167187 fix size_t to int truncations.
    "//build/config/compiler:no_size_t_to_int_warning",
    "//build/config/compiler:wexit_time_destructors",
  ]

  public_deps = [
    "//components/services/app_service/public/cpp:app_file_handling",
    "//content/public/common",
    "//ipc",
    "//skia",
  ]

  deps = [
    "//base",
    "//components/url_formatter",
    "//components/url_matcher",
    "//components/version_info",
    "//crypto",
  ]
}
